<resources>
    <string name="app_name">Brewtooth</string>
    <string name="button_brew_text">Brew!</string>
    <string name="button_brew_brewing_text">Brewing...</string>
    <string name="button_brew_fail_text">Failed.</string>
    <string name="button_brew_nocup_text">No Cup!</string>
    <string name="button_brew_refillmilk_text">Refill Milk!</string>
    <string name="button_brew_refillwater_text">Refill Water!</string>
    <string name="button_brew_refillcoffee_text">Refill Coffee!</string>
    <string name="button_brew_cleanme_text">Clean Me!</string>
    <string name="button_brew_maintain_text">Need Maintenance!</string>
    <string name="text_water">Water</string>
    <string name="text_coffee">Coffee</string>
    <string name="text_milk">Milk</string>
    <string name="text_froth">Froth</string>
    <string name="text_strength">Coffee Strength</string>
    <string name="text_volume">Volume</string>

    <string name="text_name">Name: </string>
    <string name="text_location">Location: </string>
    <string name="text_caps">Capabilities: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
