<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.DeviceListItem"
    android:padding="10dp"
    android:id="@+id/fragment_device_list_item">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPale">

        <ImageView
            app:srcCompat="@android:drawable/presence_online"
            android:id="@+id/imageView"
            android:layout_weight="0"
            android:layout_width="30dp"
            android:layout_height="30dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp">

                <TextView
                    android:text="@string/text_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:paddingRight="10dp" />

                <TextView
                    android:text="Nespresso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/device_name" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp">

                <TextView
                    android:text="@string/text_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView7"
                    android:paddingRight="10dp" />

                <TextView
                    android:text="Kitchen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/device_location" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp">

                <TextView
                    android:text="@string/text_caps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView9"
                    android:paddingRight="10dp" />

                <TextView
                    android:text="Coffee, Water, Milk, Frothing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/device_caps"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
