<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_brew"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uk.ac.soton.ecs.ciaran.brewtooth.BrewActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTintMode="src_over">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:id="@+id/layout_water">

                <ProgressBar
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/progressBar_water"
                    android:minHeight="99dp"
                    android:maxHeight="99dip"
                    android:maxWidth="99dip"
                    android:minWidth="99dip"
                    android:max="100"
                    android:progress="20"
                    android:indeterminateOnly="false"
                    android:indeterminate="false"
                    android:progressDrawable="@drawable/scaled_progress_circle"
                    android:progressTint="@color/colorWater"
                    android:background="@drawable/filled_circle"
                    android:backgroundTint="@color/colorPale" />

                <TextView
                    android:text="@string/text_water"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_water" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:visibility="visible"
                android:layout_width="wrap_content"
                android:id="@+id/layout_coffee">

                <ProgressBar
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/progressBar_coffee"
                    android:minHeight="99dp"
                    android:maxHeight="99dip"
                    android:maxWidth="99dip"
                    android:minWidth="99dip"
                    android:max="100"
                    android:progress="80"
                    android:indeterminateOnly="false"
                    android:indeterminate="false"
                    android:progressDrawable="@drawable/scaled_progress_circle"
                    android:progressTint="@color/colorPrimaryDark"
                    android:background="@drawable/filled_circle"
                    android:backgroundTint="@color/colorPale" />

                <TextView
                    android:text="@string/text_coffee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_coffee" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:id="@+id/layout_milk">

                <ProgressBar
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/progressBar_milk"
                    android:minHeight="99dp"
                    android:maxHeight="99dip"
                    android:maxWidth="99dip"
                    android:minWidth="99dip"
                    android:max="100"
                    android:progress="50"
                    android:indeterminateOnly="false"
                    android:indeterminate="false"
                    android:progressDrawable="@drawable/scaled_progress_circle"
                    android:progressTint="@color/colorMilk"
                    android:background="@drawable/filled_circle"
                    android:backgroundTint="@color/colorPale" />

                <TextView
                    android:text="@string/text_milk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_milk" />
            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/button_brew_text"
            android:layout_width="match_parent"
            android:id="@+id/button_brew"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:minHeight="69dp"
            android:textSize="24sp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPale"
            android:textColor="@color/colorPrimaryDark" />

        <Space
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:gravity="bottom">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:id="@+id/layout_strength">

                <TextView
                    android:text="@string/text_strength"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4" />

                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/seekBar_strength"
                    android:max="100"
                    android:progress="50"
                    android:thumbTint="@color/colorPrimaryDark"
                    android:progressTint="@color/colorPrimary"
                    android:secondaryProgressTint="@color/colorPrimary" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:id="@+id/layout_volume">

                <TextView
                    android:text="@string/text_volume"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5" />

                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/seekBar_volume"
                    android:max="100"
                    android:progress="50"
                    android:thumbTint="@color/colorPrimaryDark"
                    android:progressTint="@color/colorPrimary" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
